# CoWorld

./: CMakeLists.txt  M17.docx  README.md  build.sh
assets/models/AnimatedCow/gltf/: CowBlackAnimatedHeadTail.gltf
assets/models/aliminum_milk_can/: scene.gltf
assets/models/metal_storage_building/: scene.gltf
assets/models/tractor/: scene.gltf
include/: animated_mesh.hpp  animated_model.hpp  animation.hpp  animation_loader.hpp  animator.hpp  application.hpp  assimpGLMHelpers.hpp  bone.hpp  camera.hpp  config.hpp  input_manager.hpp  light.hpp  menu_system.hpp  mesh.hpp  model.hpp  plane.hpp  scene.hpp  shader.hpp  skybox.hpp  texture.hpp
include/glad/: glad.h
include/stb/: stb_image.h
shaders/: animated_object.glsl  object.glsl  object.vs  skybox.fs  skybox.vs
src/: animated_mesh.cpp  animated_model.cpp  animation.cpp  animation_loader.cpp  animator.cpp  application.cpp  bone.cpp  camera.cpp  glad.c  input_manager.cpp  light.cpp  main.cpp  menu_system.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp  skybox.cpp  stb_image.cpp  texture.cpp
